force-app/main/default/objects/Contact/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <description>Reference to an Id in an external system</description>
    <externalId>true</externalId>
    <inlineHelpText>Record Id in the external system</inlineHelpText>
    <label>External Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>