force-app/main/default/objects/Contact/fields/hasOrderPortalAccess__c.field-meta.xml
<CustomField>
    <fullName>hasOrderPortalAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Portal Access</label>
    <type>Checkbox</type>
</CustomField>