force-app/main/default/objects/Contact/fields/hasPromotionsFlag__c.field-meta.xml
<CustomField>
    <fullName>hasPromotionsFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact should be included in marketing send-outs.</description>
    <label>Send Promotions</label>
    <type>Checkbox</type>
</CustomField>