force-app/main/default/objects/Contact/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Person is an active contact for the parent Account</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>